edits from Velcom v.0.1

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -847,9 +847,10 @@ body
 		line-height: 1.5
 		color: #000000
 	&__link
-		background-color: #f2db00
+		background-color: #fff233
+		border: 1px solid #000000
 		&:hover
-			background-color: #ffffff
+			background-color: #edcd1c
 
 .data-sertificate
 	max-width: 714px
