--- a/src/pug/5-0project.pug
+++ b/src/pug/5-0project.pug
@@ -98,7 +98,7 @@ block content
 						.projects-wpapper
 							//-mixin projesct-item(img, logo, title, info)
 							+project-item('project-1.jpg', 'project-logo-1.png', 'Мир ЦОД 2017', 'Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса', 'best-exp')
-							+project-item('project-2.jpg', 'project-logo-2.png', 'Интернет-cлужба cервиса абонента для юридических лиц cервиса', 'Позволяет самостоятельно совершать ряд операций по обслуживанию абонентских номеров', '')
+							+project-item('project-2.jpg', 'project-logo-2.png', 'Интернет-cлужба cервиса абонента для юридических лиц cервиса', 'Позволяет самостоятельно совершать ряд операций по обслуживанию абонентских номеров', 'best-exp')
 							+project-item('project-3.jpg', 'project-logo-3.png', 'Интернет-cлужба cервиса абонента', 'Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса', 'best-exp')
 
 				+paginate
