--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -2,13 +2,14 @@
 	padding: 40px 10px 0 10px
 	width: 100%
 	background-color: #ffffff
+	border: 1px solid #cccccc
 	// &__head
 	// &__body
 	&__footer
 		margin-top: 10px
 		margin-right: -10px
 		margin-left: -10px
-		padding: 33px 10px 60px 10px
+		padding: 33px 10px 60px 35px
 		background-color: #fafafa
 	&__title
 		margin-bottom: 20px
