--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -95,8 +95,8 @@
 	.form-block
 		background-color: #ffffff
 		&__footer
-			background-color: #ffffff
-			padding-bottom: 10px
+			// background-color: #ffffff
+			padding-bottom: 30px
 	.pop-close
 		right: 25px
 		top: 20px
