--- a/src/pug/3-2service-inner.pug
+++ b/src/pug/3-2service-inner.pug
@@ -73,31 +73,7 @@ block content
 													+icon('arrow_services')
 									.accordeon-body(style='display: none;')
 										.accordeon-body-content
-											dl
-												dt.text-small Канал в интернет, Мбит/с
-												dd.text-small.text-small_black.text-small_bold до 6
-												dt.text-small Бесплатный внутренний IP-адрес IPv4
-												dd.text-small.text-small_black.text-small_bold ∞
-												dt.text-small Бесплатный внешний IP-адрес IPv4
-												dd.text-small.text-small_black.text-small_bold 1
-												dt.text-small Бесплатный IP-адрес IPv6
-												dd.text-small.text-small_black.text-small_bold ∞
-												dt.text-small Стандартный SLA
-												dd.text-small.text-small_black.text-small_bold
-													.accordeon-checked
-														+icon('checked')
-												dt.text-small Карты доступа
-												dd.text-small.text-small_black.text-small_bold до 3
-												dt.text-small Круглосуточный доступ
-												dd.text-small.text-small_black.text-small_bold
-													.accordeon-checked
-														+icon('checked')
-												dt.text-small Порт, 1 Гбит/c
-												dd.text-small.text-small_black.text-small_bold 2
-												dt.text-small Отчеты ежемесячные стандартные
-												dd.text-small.text-small_black.text-small_bold
-													.accordeon-checked
-														+icon('checked')
+											
 								.accordeon-wrapper
 									.accordeon-head
 										label.accordeon-head-check
@@ -188,6 +164,36 @@ block content
 												dd.text-small.text-small_black.text-small_bold
 													.accordeon-checked
 														+icon('checked')
+
+								.table-wrap
+									table
+										tr
+											th Наименование
+											th Количество тип
+											th Ед. измерения 
+											th Комментарий
+										tr
+											td Уровень влажности в помещении
+											td государственного сферой и белорусоведения
+											td 
+												strong шт.
+											td 
+												a(href="tel:+375172295263") +375 (17) 229-52-63
+										tr
+											td Уровень влажности  в помещении
+											td государственного сферой и белорусоведения
+											td 
+												strong Гб
+											td
+												a(href="tel:+375172295263") +375 (17) 229-52-63
+										tr
+											td Уровень влажности в помещении
+											td государственного сферой и белорусоведения
+											td 
+												strong Мб
+											td
+												a(href="tel:+375172295263") +375 (17) 229-52-63
+									
 								.accordeon-wrapper
 									.accordeon-head
 										label.accordeon-head-check
