--- a/src/pug/etalon.pug
+++ b/src/pug/etalon.pug
@@ -72,7 +72,7 @@ block content
 							li Климатическое оборудование также построено на базе резервирования
 							li При проведении профилактических работ функционирование ЦОД функционирует в обычном режиме не страдает
 							li ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
-
+					
 					h3 Система поддержания климата
 					.parameters-table-wrap
 						.parameters-table
@@ -138,7 +138,6 @@ block content
 								p.data-center-partner__title Сотрудничество
 								p.data-center-partner__text Мы открыты к сотрудничеству и всегда рады найти новых деловых партнеров
 								.data-center-partner__link.link-button.link-button_small Стать партнёром
-
 					p
 						small
 							|Позвоните нам&#32;
@@ -152,6 +151,36 @@ block content
 								strong форму обратной связи
 							|, и консультант свяжется с вами для разработки индивидуального предложения
 					hr
+					h3 Система поддержания климата
+					.table-wrap
+						table
+							tr
+								th Наименование
+								th Количество тип
+								th Ед. измерения 
+								th Комментарий
+							tr
+								td Уровень влажности в помещении
+								td государственного сферой и белорусоведения
+								td 
+									strong шт.
+								td 
+									a(href="tel:+375172295263") +375 (17) 229-52-63
+							tr
+								td Уровень влажности  в помещении
+								td государственного сферой и белорусоведения
+								td 
+									strong Гб
+								td
+									a(href="tel:+375172295263") +375 (17) 229-52-63
+							tr
+								td Уровень влажности в помещении
+								td государственного сферой и белорусоведения
+								td 
+									strong Мб
+								td
+									a(href="tel:+375172295263") +375 (17) 229-52-63
+
 					h3 Отзывы клиента
 					.feedback
 						.feedback__img
