--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -242,9 +242,10 @@ body
 		padding-top: 10px
 		margin-bottom: 100px
 	&-title
-		font-size : 32px
-		line-height : 1
+		font-size: 32px
+		line-height: 1
 		margin-bottom: 45px
+		margin-top: 0
 	&-slider
 		position: relative
 	&-outer
@@ -384,6 +385,7 @@ body
 		padding-right: 20px
 		h2
 			margin-bottom: 20px
+			margin-top: 0
 		p
 			margin-top: auto
 			margin-bottom: 0
@@ -452,6 +454,7 @@ body
 		line-height: 1.438
 		max-width: 1000px
 		margin-bottom: 60px
+		margin-top: 0
 	&__slider
 		overflow: hidden
 	&__item
@@ -516,6 +519,8 @@ body
 		justify-content: space-between
 		align-items: center
 		margin-bottom: 63px
+		h2
+			margin-top: 0
 	&__wrap
 		font-size: 0
 		display: flex
@@ -779,9 +784,10 @@ body
 .services-inner-details
 	position: relative
 	max-width: 714px
-	padding: 70px 0
+	padding: 70px 0 45px 0
 	&__list
 		margin-top: 25px
+		margin-bottom: 25px
 	&__item
 		padding-left: 40px
 		margin-bottom: 32px
@@ -951,6 +957,8 @@ body
 		border-bottom: 1px solid #cccccc
 		padding-bottom: 40px
 		margin-bottom: 50px
+		.h2
+			margin: 0
 	+r(768)
 		&__head
 			padding-bottom: 20px
