--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -521,6 +521,7 @@ body
 		margin-bottom: 63px
 		h2
 			margin-top: 0
+			margin-bottom: 0
 	&__wrap
 		font-size: 0
 		display: flex
@@ -784,7 +785,7 @@ body
 .services-inner-details
 	position: relative
 	max-width: 714px
-	padding: 70px 0 45px 0
+	padding: 45px 0 45px 0
 	&__list
 		margin-top: 25px
 		margin-bottom: 25px
@@ -889,6 +890,7 @@ body
 .gallery-inner
 	margin-bottom: -50px
 	.h2, h2
+		margin-top: 0
 		margin-bottom: 14px
 	.gallery
 		margin-top: 50px
@@ -995,14 +997,13 @@ body
 
 .error-404
 	&__title
+		margin-top: 0
 		margin-bottom: 45px
 	&__desc
 		margin-bottom: 100px
 		a
 			color: #000000
 			+tr(color .1s ease-in-out)
-
-
 	+r(560)
 		&__title
 			margin-bottom: 25px
@@ -1257,15 +1258,17 @@ body
 		+r(768)
 			display: none
 	.content-inner__title
+		margin-top: 0
+		margin-bottom: 0
 		margin-right: 120px
 		+r(768)
 			margin-right: 0
 .services-config
 	width: 100%
 	.h3
-		margin-bottom: 47px
+		// margin-bottom: 47px
 		+r(768)
-			margin-bottom: 20px
+			// margin-bottom: 20px
 	&-wrap
 		margin-bottom: 65px
 		+r(768)
@@ -1301,6 +1304,11 @@ body
 			&-icon
 				span
 					transform: rotate(-180deg)
+	&.no-accordeon
+		&:hover
+			box-shadow: none
+		& .accordeon-head-content
+			cursor: default
 
 .accordeon-checked
 	width: 16px
@@ -1348,8 +1356,7 @@ body
 		width: 100%
 		display: flex
 		align-items: center
-		&:hover
-			cursor: pointer
+		cursor: pointer
 		+r(450)
 			align-items: flex-start
 	&-name
@@ -1434,6 +1441,7 @@ body
 		&-title
 			display: flex
 			align-items: center
+			margin-top: 0
 			margin-bottom: 40px
 		&-icon
 			margin-left: 13px
@@ -1506,6 +1514,9 @@ body
 		padding-bottom: 60px
 		border-bottom: 1px solid #cccccc
 		margin-bottom: 55px
+		h2
+			margin-top: 0
+			margin-bottom: 0
 		+r(620)
 			padding-bottom: 40px
 
