--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -12,9 +12,11 @@
 		font-weight: 400
 		max-width: 714px
 		margin-top: 45px
-		margin-bottom: 40px
+		margin-bottom: 37px
 		display: flex
 		align-items: center
+		&:first-child
+			margin-top: 0
 		+r(768)
 			font-size: 30px
 	h3
@@ -23,16 +25,16 @@
 		line-height: 1.7
 		font-weight: 400
 		max-width: 714px
-		margin-top: 25px
-		margin-bottom: 22px
+		margin-top: 40px
+		margin-bottom: 30px
 		display: flex
 		align-items: center
 		flex-wrap: wrap
 	h4
 		color: #000000
 		font-size: 18px
-		margin-top: 21px
-		margin-bottom: 18px
+		margin-top: 25px
+		margin-bottom: 17px
 		line-height:  1.333
 		font-weight: 600
 		max-width: 714px
@@ -119,8 +121,8 @@
 		padding-top: 20px
 
 	.bg-gray
-		margin-top: 68px
-		padding-top: 60px
+		margin-top: 50px
+		padding-top: 35px
 		padding-bottom: 45px
 		margin-bottom: 63px
 
@@ -317,7 +319,7 @@ p
 	line-height: 1.4
 	font-weight: 400
 	margin-top: 45px
-	margin-bottom: 40px
+	margin-bottom: 37px
 	+r(768)
 		font-size: 30px
 .h3
@@ -325,14 +327,14 @@ p
 	font-size: 20px
 	line-height: 1.7
 	font-weight: 400
-	margin-top: 25px
-	margin-bottom: 22px
+	margin-top: 40px
+	margin-bottom: 30px
 .h4
 	color: #000000
 	font-size: 18px
 	line-height:  1.333
 	font-weight: 600
-	margin-top: 21px
+	margin-top: 25px
 	margin-bottom: 18px
 
 .text-primary
@@ -555,6 +557,7 @@ p
 	+tr(all .3s ease)
 	&__title
 		width: 100%
+		margin-top: 0
 		margin-bottom: 32px
 		display: flex
 		justify-content: space-between
@@ -955,6 +958,8 @@ p
 	&__title
 		line-height: 1.406
 		max-width: 714px
+		margin-bottom: 0
+		margin-top: 0
 	+r(768)
 		width: 100%
 		margin-top: 30px
@@ -968,6 +973,7 @@ p
 	padding-bottom: 60px
 	position: relative
 	&__title
+		margin-top: 0
 		margin-bottom: 55px
 	&__decor
 		position: absolute
@@ -1007,6 +1013,8 @@ p
 		max-width: 714px
 	&__title
 		line-height: 1
+		margin-bottom: 0
+		margin-top: 0
 	+r(980)
 		margin-bottom: 50px
 		padding-bottom: 40px
