--- a/src/pug/includes/_head.pug
+++ b/src/pug/includes/_head.pug
@@ -23,6 +23,7 @@ link(rel="icon", type="image/png", sizes="16x16", href="img/fav/favicon-16x16.pn
 meta(name="msapplication-TileColor", content="#fff233")
 meta(name="msapplication-TileImage", content="img/fav/mstile-144x144.png")
 link(rel="stylesheet" media="all" href="css/screen.min.css")
+link(rel="stylesheet" media="all" href="css/changes.css")
 
 
 
