small css fix (changes.css)

--- a/src/sass/changes.sass
+++ b/src/sass/changes.sass
@@ -7,9 +7,23 @@
 .link-banner__title
 	margin-top: 0
 
+.content-inner__title:first-child
+	margin-bottom: 40px
+
+.content-area h3
+	line-height: 1.4
+	margin-top: 25px
+	margin-bottom: 10px
+
+.services-config-ordering
+	margin: 16px 0
+
 @media only screen and (max-width: 768px)
 	.side-bar-nav,
 	.link-banner
 		width: 100%
 		max-width: 450px
 		margin-left: 0
+	.content-inner__title:first-child
+		margin-bottom: 20px
+		
